log
Fri Apr 22 15:25:28 UTC 2022: 
 tests:  1|8
total_score: 0/70
eb8e80d
Fri Apr 22 15:25:57 UTC 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:6: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key1’
   new->key1=key1;
      ^~
treemap.c:42:13: error: ‘key1’ undeclared (first use in this function); did you mean ‘key_t’?
   new->key1=key1;
             ^~~~
             key_t
treemap.c:42:13: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:43:6: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘key2’
   new->key2=key2;
      ^~
treemap.c:43:13: error: ‘key2’ undeclared (first use in this function); did you mean ‘key1’?
   new->key2=key2;
             ^~~~
             key1
Compilation failed
5af79ec
Fri Apr 22 15:27:37 UTC 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
e4401ba
Fri Apr 22 15:34:15 UTC 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘minimum’:
treemap.c:54:6: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
   x->current=x->root;
      ^~~~~~~
      parent
treemap.c:54:15: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘root’
   x->current=x->root;
               ^~
treemap.c:55:12: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
   while(x->current->left != NULL){
            ^~~~~~~
            parent
treemap.c:56:8: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
     x->current=x->current->left;
        ^~~~~~~
        parent
treemap.c:56:19: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
     x->current=x->current->left;
                   ^~~~~~~
                   parent
treemap.c:58:13: error: ‘TreeNode {aka struct TreeNode}’ has no member named ‘current’; did you mean ‘parent’?
   return x->current;
             ^~~~~~~
             parent
treemap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
0313fb7
Fri Apr 22 15:36:10 UTC 2022: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  6|6
total_score: 5/70
8fa1813
Fri Apr 22 15:46:48 UTC 2022: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:14: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
       return aux;
              ^~~
cc1: all warnings being treated as errors
Compilation failed
f54e68f
Fri Apr 22 15:47:06 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:14: error: return makes pointer from integer without a cast [-Werror=int-conversion]
       return 1;
              ^
cc1: all warnings being treated as errors
Compilation failed
440195e
Fri Apr 22 15:47:42 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:14: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
       return tree;
              ^~~~
cc1: all warnings being treated as errors
Compilation failed
10afdac
Fri Apr 22 15:47:59 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:82:14: error: incompatible types when returning type ‘TreeNode {aka struct TreeNode}’ but ‘Pair * {aka struct Pair *}’ was expected
       return *aux;
              ^~~~
Compilation failed
0ef7d5f
